fixed header and overflow issue on main page

--- a/home/static/home/css/photos.css
+++ b/home/static/home/css/photos.css
@@ -181,6 +181,7 @@
   text-align: center;
   margin-left: -20px;
   margin-right: -20px;
+  overflow-x: hidden;
 }
 
 .parallax-section .overlay {
